tests/ui/sized-hierarchy/migration.e2024.stderr
error: relaxing a default bound only does something for `?Sized`; all other traits are not bound by default
  --> $DIR/migration.rs:19:14
   |
LL | pub fn tr<T: ?Tr>() { }
   |              ^^^

error: aborting due to 1 previous error

